--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
-/* Imposto parametri e elementi comuni */
+/* Parametri e configurazioni comuni */
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 li {
     list-style: none;
+}
+
+.white {
+    color: white;
+}
+
+.purple {
+    color: rgb(114, 137, 218);
 }
 
 .section-container {
@@ -15,43 +24,54 @@ li {
     margin: 0 auto;
 }
 
-.btn {
-    display: inline-block;
-    color: white;
-    border-radius: 20px;
+img {
+    width: 100%;
+}
+
+.space {
+    padding: 25px 0;
+}
+
+span > a,
+div > a {
     text-decoration: none;
-    background-color: #7289DA;
-    margin: 10px;
 }
 
-.btn.btn-small {
-    padding: 10px 15px;
-    font-size: 14px;
-    background-color: whitesmoke;
-    color: black;
+.ta-c {
+    text-align: center;
 }
 
-.btn.btn-big {
-    padding: 15px 20px;
-    font-size: 14px;
-    background-color: black;
+.vertical {
+    line-height: 50px;
+}
+
+.vertical-small{
+    line-height: 30px;
+}
+
+.fa-brands {
+    font-size: 20px;
+    padding: 0 5px;
 }
 
 .wave {
-    height: 100px;
     background-image: url(./img/wave.svg);
+    height: 100px;
     filter: opacity(0.04);
 }
 
 .rotate {
-    transform: rotate(180deg);
+    transform: rotateX(0.5turn);
 }
 
-/* Imposto logo e prefazione */
+/* Header logo e prefazione */
+
+header {
+    background-color: #255ee9;
+}
 
 .top-bar {
-    padding: 20px;
-    background-color: #245ee9;
+    padding: 10px;
 }
 
 .top-bar .content {
@@ -62,7 +82,7 @@ li {
     align-items: center;
 }
 
-.top-bar .login-column {
+.top-bar .logo-column {
     width: 20%;
 }
 
@@ -81,22 +101,22 @@ li {
 
 .menu-column ul li a {
     text-decoration: none;
-    color: white;
     padding: 5px 10px;
     display: inline-block;
 }
 
-/* .menu-column ul li a:hover */
+/* Sezione jumbotron */
 
 .login-column {
-    width: 20%;
-    text-align: right;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .jumbotron {
     display: flex;
     justify-content: center;
-    padding: 200px;
+    padding: 55px;
     align-items: center;
     background-image: url(./img/jumbo.png);
     background-size: cover;
@@ -104,19 +124,33 @@ li {
 }
 
 .jumbotron .content {
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
+    width: 600px;
+    height: 250px;
 }
 
-h1 {
-    color: white;
-    margin-bottom: 25px;
+.button {
+    border: 0 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
 }
 
-.top-bar .content > p {
+.lf {
+    background-color: white;
+    color: black;
+}
+
+.rg {
+    background-color: black;
     color: white;
-    line-height: 30px;
+}
+
+.star {
+    background-image: url(./img/stars.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding: 15px;
 }
 
 /* Imposto corpo e colonne */
@@ -129,25 +163,40 @@ section {
     display: flex;
 }
 
-.section-container-behind {
-    background-color: rgb(245, 245, 245);
-}
-
 .big-column {
     width: 60%;
+    height: 300px;
 }
 
 .small-column {
     width: 40%;
+    height: 300px;
 }
 
-/* Form e fine pagina */
+.bg-fix {
+    background-color: #f6f6f6;
+}
+
+.form {
+    width: 800px;
+    height: 500px;
+}
+
+/* Form e prima parte footer */
+
+footer {
+    background-color: #23272a;
+}
 
 .footer-top {
     width: 800px;
     margin: 0 auto;
     display: flex;
     padding: 20px 0 20px 0;
+}
+
+.ita {
+    width: 20px;
 }
 
 .footer-top .mix-column-lx {
@@ -158,6 +207,7 @@ section {
 .footer-top .mix-column-rx {
     display: flex;
     flex-basis: 70%;
+    height: 300px;
     align-items: stretch;
 }
 
@@ -165,15 +215,19 @@ section {
     flex-basis: 25%;
 }
 
-.footer-bottom {
+/* Seconda parte footer */
+
+.footer-bottom { 
     width: 800px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
+    border-top: 1px solid white;
 }
 
-.footer-bottom .logo-column,
-.footer-bottom .button-column {
+.button-column {
+    background-color: rgb(114, 137, 218) ;
+    border-radius: 10px;
+    padding: 10px;
 }
-
